# bible-io-package-py

./: LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
src/bible-io/: __init__.py  book.py  definitions.py
src/bible_io/: __init__.py  bible_book_enums.py  bible_class.py  book.py  chapter.py  errors.py  references.py  verse.py  word_index.py
src/bible_json/: __init__.py  bible_class.py  enums.py
src/bible_json/json/: hungarian_bible.json
test/: conftest.py
test/bible_structure/: test_books.py  test_chapters.py  test_verses.py
test/bible_versions/: fi_pr.json  swahili_bible.json
test/word_search/: test_word_search.py
