[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bible-io"
version = "1.0.0"
authors = [{ name = "Moty Fainer" }]
description = "Bible parsing package"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/m0ty/bible-io-package-py"

[dependency-groups]
dev = [
  "pytest==8.4.2",
  "mypy>=1.11",
  "build>=1.2",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/bible-io"]

[tool.hatch.build.targets.wheel.force-include]
"src/bible-io/py.typed" = "bible-io/py.typed"

[tool.hatch.build.targets.sdist.force-include]
"src/bible-io/py.typed" = "src/bible-io/py.typed"
