[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bible-io"
version = "1.0.3"
authors = [{ name = "Moty Fainer" }]
description = "Bible parsing package"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
    "bible-io-references>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/m0ty/bible-io-package-py"

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "mypy>=1.19.1",
  "build>=1.4.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "mypy>=1.19.1",
  "build>=1.4.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/bible_io"]

[tool.hatch.build.targets.wheel.force-include]
"src/bible_io/py.typed" = "bible_io/py.typed"

[tool.hatch.build.targets.sdist.force-include]
"src/bible_io/py.typed" = "src/bible_io/py.typed"
